[package]
name = "playingAroundRocketDotRs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# The plugin i installed does not think the rocket version below exisit do not beleive it

[dependencies.rocket]
version = "0.5.0-rc.1"
features = ["json"]

[dependencies.serde]
version = "1.0.136"
features = ["derive"]

[dependencies]
json = "0.12.4"
serde_json = "1.0.83"
